# IRC-server-client-cpp

./: CMakeLists.txt  README.md
.cache/clangd/index/: client.cpp.3A33A1083EB524AC.idx  client.h.F3645403A76A93BA.idx  main.cpp.8B7E25BC1293943D.idx  main.cpp.CDA327A5B7A2E3BF.idx  server.cpp.2C08A325539067D2.idx  server.h.8E80AD73AF8A396B.idx
client/: CMakeLists.txt  client.cpp  main.cpp  notes.txt
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/server/: CMakeLists.txt  main.cpp  notes.txt  server.cpp  server.h
